--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "react_todo",
   "version": "0.1.0",
   "private": true,
-  "homepage": "http://SvetozarMiskovic.github.io/react-todo",
+  "homepage": "https://SvetozarMiskovic.github.io/react-todo/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.15.1",
     "@testing-library/react": "^11.2.7",
